ui. fixed overflow in button

--- a/ui/src/styles/main.css
+++ b/ui/src/styles/main.css
@@ -986,3 +986,7 @@ circle {
 .margin-bottom-20 {
     margin-bottom: 20px;
 }
+
+.list-view-pf-additional-info {
+    width: 35% !important;
+}
